GNOME Bugzilla – Bug 757722
Match project directories when searching to open a project
Last modified: 2016-02-22 03:05:44 UTC
If I try to open a project, and type 'gobject-introsp' to search for GObject Introspection, I get no results. If I search for 'gobject' I get GIR amongst the results; as soon as I add the '-' the results list empties.
(In reply to Philip Withnall from comment #0) > If I try to open a project, and type 'gobject-introsp' to search for GObject > Introspection, I get no results. If I search for 'gobject' I get GIR amongst > the results; as soon as I add the '-' the results list empties. Hi, I would like to work on this bug but currently unable to reproduce it. I am able to search with '-'. Can you give the steps to reproduce it?
The steps to reproduce it are in comment #0; there isn’t much more information I can give. I have my projects in /opt/gnome3/source, including an /opt/gnome3/source/gobject-introspection (which is a clone of https://git.gnome.org/browse/gobject-introspection). This is with Builder 3.18.x.
Created attachment 321802 [details] [review] greeter: add project path to search keywords Adds the path to the project path to the search keywords. This allows for searching for things like "gobject-introspection" when the project is contained in that directory. We only add the parent directory, so that we don't have to deal with local paths vs remote URIs.
Fixed in commit 33f5d00dd525f61b00196b463395a6aefcd1176e. Attachment 321802 [details] pushed as 33f5d00 - greeter: add project path to search keywords