greeter: add project path to search keywords

Adds the path to the project path to the search keywords. This allows for
searching for things like "gobject-introspection" when the project is
contained in that directory.

We only add the parent directory, so that we don't have to deal with
local paths vs remote URIs.

https://bugzilla.gnome.org/show_bug.cgi?id=757722